# web-capture-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_DESCRIPTION.md  RELEASE_NOTES.md  package.ps1  setup_curl.ps1  test1.0.sln
src/cpp/: main.cpp
src/cs/: CSharpApp.csproj  Program.cs
src/python/: coordinator.py  main.py
